--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+:root {
+  --midnight-blue: #03045eff;
+  --dark-cornflower-blue: #023e8aff;
+  --star-command-blue: #0077b6ff;
+  --blue-green: #0096c7ff;
+  --pacific-blue: #00b4d8ff;
+  --sky-blue-crayola: #48cae4ff;
+  --middle-blue: #90e0efff;
+  --blizzard-blue: #ade8f4ff;
+  --light-cyan: #caf0f8ff;
+}
 * {
   margin: 0%;
   padding: 20px;
@@ -6,9 +17,16 @@
 }
 body {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  margin: ;
+  margin: 0 auto;
 }
 header,
 section {
   width: 960px;
+}
+header {
+  display: flex;
+}
+img {
+  width: 200px;
+  height: 200px;
 }
